Rename slicing test for clarity