@@ -18,7 +18,7 @@ import org.junit.jupiter.api.Test;
 import java.io.File;
 import java.util.HashMap;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 
 @Disabled("Requires large datasets and external dependencies")
 public class OnlineTest {
@@ -52,7 +52,7 @@ public class OnlineTest {
     }
 
     @Test
-    void testSlicingSimpleChain() throws Exception {
+    void testSlicingBenchmarkGraph() throws Exception {
         var readFile = new File("../TestData/TestGraphs/TestFMJsons/FM_BenchmarkGraph_6_Services_NoExcludes_57.344_configs.json");
         var reader = new FeatureModelReader(_Logger);
         var model = reader.readFeatureModelJson(readFile);
@@ -81,25 +81,31 @@ public class OnlineTest {
         var res = merger.startForTesting(newFM, countrySideEdge, 2);
 
 
-        // Expect one slice containing startTask, task1, task2.
-        assertEquals(1, slicedModels.size(), "There should be one slice for a simple chain");
-        var slice = slicedModels.getFirst();
-        assertEquals(3, slice.size(), "Slice should contain 3 features");
-        assertEquals("startTask", slice.get(0).getName());
-        assertEquals("task1", slice.get(1).getName());
-        assertEquals("task2", slice.get(2).getName());
+        // The benchmark graph is sliced into individual tasks plus a final pair (task7, endTask).
+        assertEquals(12, slicedModels.size(), "Unexpected number of slices for benchmark graph");
+        assertEquals(1, slicedModels.get(0).size(), "First slice should contain only startTask");
+        assertEquals("startTask", slicedModels.get(0).getFirst().getName());
+        assertEquals("task1", slicedModels.get(1).getFirst().getName());
+        var terminalSlice = slicedModels.get(3);
+        assertEquals(2, terminalSlice.size(), "Fourth slice should contain two terminal tasks");
+        assertEquals("task7", terminalSlice.get(0).getName());
+        assertEquals("endTask", terminalSlice.get(1).getName());
     }
 
     @Test
     public void testSmallFM() {
         var merger = new HardwareSensitiveFeatureModelMerger(_Logger);
         var graph = merger.startForTesting(_SmallFeatureModelWithConfigurations, _EdgeInformation, 12);
+        assertNotNull(graph, "Graph should not be null for small feature model");
+        assertTrue(merger.validConfigurations > 0, "Should merge at least one valid configuration");
     }
 
     @Test
     public void testHugeFMSmallEdge() {
         var merger = new HardwareSensitiveFeatureModelMerger(_Logger);
         var graph = merger.startForTesting(_HugeFeatureModelWithConfigurations, _EdgeInformation, 2);
+        assertNotNull(graph, "Graph should not be null for huge feature model with limited edge");
+        assertTrue(merger.validConfigurations > 0, "Should merge at least one valid configuration");
     }
 
     @Test
@@ -107,5 +113,7 @@ public class OnlineTest {
         var merger = new HardwareSensitiveFeatureModelMerger(_Logger);
         var fullEdge = new AvailableEdgeHardware(10);
         var graph = merger.startForTesting(_HugeFeatureModelWithConfigurations, fullEdge, 12);
+        assertNotNull(graph, "Graph should not be null for huge feature model with full edge");
+        assertTrue(merger.validConfigurations > 0, "Should merge at least one valid configuration");
     }
 }
